feat : added task CRUD frontend

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
+black==25.1.0
 cffi==1.17.1
 click==8.2.1
 colorama==0.4.6
@@ -13,12 +14,17 @@ fastapi==0.116.1
 h11==0.16.0
 idna==3.10
 loguru==0.7.3
+mypy_extensions==1.1.0
 openpyxl==3.1.5
+packaging==25.0
 passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.3.8
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+PyJWT==2.10.1
 pymongo==4.13.2
 python-dotenv==1.1.1
 python-jose==3.5.0
